--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/adaptive.css">
+	<link rel="stylesheet" type="text/css" href="slider/index.css"/>
+	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script> 
+	<script type="text/javascript" src="slider/click-carousel.js"></script>
+	<script type="text/javascript">
+	$(function(){
+		$("#slider").clickCarousel({margin: 10});	
+	});
+	</script>
 	<title>Gustoso</title>
 	<style>
 		@font-face{
@@ -64,12 +72,12 @@
 				</div>
 				<div class="fonts">
 					<ul>
-						<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i id="font" class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i id="font" class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i id="font" class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
-					<i class="fa fa-bars" aria-hidden="true"></i>
+					<i id="font" class="fa fa-bars" aria-hidden="true"></i>
 		</header>
 	</div>
 		<div class="container_inner">
@@ -88,7 +96,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="cintainer second">
+	<div class="container second">
 		<div class="container_inner">
 			<div class="left_part">
 				<span class="art">Art of cakes</span>
@@ -117,7 +125,140 @@
 			</div>
 		</div>
 	</div>
-<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="js/script_1.js"></script>
+	<div class="container third">
+		<div class="container_inner">
+			<div class="food_widget">
+				<div class="left">
+					<img  id="food" src="img/third/Ebene-7.png">
+				</div>
+					<div class="stars">
+						<ul>
+							<li id="for_stars"><i id="star1" class="fa fa-star" aria-hidden="true"></i></li>
+							<li id="for_stars"><i id="star2" class="fa fa-star" aria-hidden="true"></i></li>
+							<li id="for_stars"><i id="star3" class="fa fa-star" aria-hidden="true"></i></li>
+							<li id="for_stars"><i id="star4" class="fa fa-star" aria-hidden="true"></i></li>
+							<li id="for_stars"><i id="star5" class="fa fa-star" aria-hidden="true"></i></li>
+						</ul>
+					</div>				
+				<span class="h3">Tasty pancakes</span><br>
+				<div class="right">
+					<div class="food_menu">
+						<span class="h1">Tasty pancakes</span><br>
+						<span class="h2">season favourite</span>
+						<p class="discription">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>	
+					</div>
+					<div class="menu_hide">
+						<i id="hide" class="fa fa-sort" aria-hidden="true"></i>
+					</div>
+
+					<div id="slider">
+							<img src="slider/img1.png" alt="Cuba" />
+							<img src="slider/img2.png" alt="Cuba" />
+							<img src="slider/img3.png" alt="Cuba" />
+							<img src="slider/img1.png" alt="Cuba" />
+							<img src="slider/img2.png" alt="Cuba" />
+							<img src="slider/img3.png" alt="Cuba" />
+					</div>
+					<div class="time">
+						<span class="for_time1">Ready in</span><br>
+						<span class="for_time2">40</span><br>
+						<span class="for_time3">mins</span>
+					</div>
+					<i id="carouselLeft" class="fa fa-chevron-circle-left" aria-hidden="true"></i>
+					<i id="carouselRight" class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+					<img id="wind" src="img/third/windmill.png">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container fourth">
+		<div class="container_inner">
+			<div class="left4_part">
+				<div class="titlee">
+					<span class="break">Breakfast <br><span class="time4">7am Breakfast? we’re open!</span></span>
+				</div>
+				<div class="titlee">
+					<span class="components">Full breakfast<br><span class="components_inner">Duis ut tortor, et risus, vulputate pretium</span><br><span class="price">$12.49</span></span>
+				</div>
+				<div class="titlee" >
+					<span class="components" style="margin-top: 70px;">Toast & Jam <br><span class="components_inner">Suspendisse, tempus, nterdum</span><br><span class="price">$4.90</span></span>
+				</div>
+				<div class="titlee" style="margin-bottom: 70px;">
+					<span class="components" style="margin-top: 70px;">Muffins<br><span class="components_inner">Fusce eget dui sodales est</span><br><span class="price">$3.95</span></span>
+				</div>
+			</div>
+			<div class="right4_part">
+				<div class="menu4">
+					<div class="borderr">
+						<span class="m4">EST.</span><span class="m4 rt">1893.</span>
+						<div class="forHead">
+							<div class="circle_left"></div>
+							<span class="linee"></span>
+							<div class="circle_center">
+								<img src="img/fourth/Vektor-Smartobjekt.png" alt="">
+							</div>
+							<div class="circle_right"></div>
+						</div>
+						<div class="menuAfter">
+							<span class="menuAfte_inn">
+								Your morning Escape with Flair
+							</span>
+							<span class="menuAfter_inn_content">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget erosfaucibus tincidunt. Duis leo.</span>
+						</div>
+						<a href="#" id="read">READ</a>
+					</div>
+				</div>
+				<div class="menu4_2">
+					<div class="borderr">
+						<span class="m4">EST.</span><span class="m4 rt">1893.</span>
+						<div class="forHead">
+							<div class="circle_left"></div>
+							<span class="linee"></span>
+							<div class="circle_center">
+								<img src="img/fourth/Vektor-Smartobjekt.png" alt="">
+							</div>
+							<div class="circle_right"></div>
+						</div>
+						<div class="menuAfter">
+							<span class="menuAfte_inn">
+								Your morning Escape with Flair
+							</span>
+							<span class="menuAfter_inn_content">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget erosfaucibus tincidunt. Duis leo.</span>
+						</div>
+						<a href="#" id="read" style="margin:30px 0 30px;">READ</a>
+					</div>
+				</div>
+				<div class="menu4_3">
+					<div class="borderr">
+						<span class="m4">EST.</span><span class="m4 rt">1893.</span>
+						<div class="forHead">
+							<div class="circle_left"></div>
+							<span class="linee"></span>
+							<div class="circle_center">
+								<img src="img/fourth/Vektor-Smartobjekt.png" alt="">
+							</div>
+							<div class="circle_right"></div>
+						</div>
+						<div class="menuAfter">
+							<span class="menuAfte_inn">
+								Your morning Escape with Flair
+							</span>
+							<span class="menuAfter_inn_content">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget erosfaucibus tincidunt. Duis leo.</span>
+						</div>
+						<a href="#" id="read" style="margin:15px 0 15px;">READ</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container five">
+		<div class="container_inner">
+			<div class="header_five">
+				<img src="img/five/Vektor-Smartobjekt.png" alt="">
+				<span class="header_five1">The Jibarito sandwich</span><br><span class="header_five2">the best sandwich you’ve ever tasted!</span>
+			</div>
+		</div>
+	</div>
+<script async type="text/javascript" src="js/script_1.js"></script>
 </body>
 </html>
