--- a/test/index.html
+++ b/test/index.html
@@ -257,6 +257,12 @@
 				<img src="img/five/Vektor-Smartobjekt.png" alt="">
 				<span class="header_five1">The Jibarito sandwich</span><br><span class="header_five2">the best sandwich you’ve ever tasted!</span>
 			</div>
+			<div class="lft">
+				
+			</div>
+			<div class="rit">
+				
+			</div>
 		</div>
 	</div>
 <script async type="text/javascript" src="js/script_1.js"></script>
