--- a/test/index.html
+++ b/test/index.html
@@ -258,12 +258,61 @@
 				<span class="header_five1">The Jibarito sandwich</span><br><span class="header_five2">the best sandwich you’ve ever tasted!</span>
 			</div>
 			<div class="lft">
-				
+				<div class="lf_content">
+					<img src="img/five/img1.png" alt=""><br>
+					<span class="lf_content_head">Class aptent</span><br>
+					<span class="lf_content_p">Quot alienum persecuti ut eam, nam ad  atqui primis nusquam.</span>
+				</div>
+				<div class="lf_content">
+					<img src="img/five/img2.png" alt=""><br>
+					<span class="lf_content_head">Nulla eget</span><br>
+					<span class="lf_content_p">Nullam dictum felis eu pede mollis  pretium Integer tincidunt.</span>
+				</div>
+				<div class="lf_content">
+					<img src="img/five/img3.png" alt=""><br>
+					<span class="lf_content_head">Sed nibh purus</span><br>
+					<span class="lf_content_p">Aenean eleifend tellus leo ligula,  porttitor eu, consequat vitae.</span>
+				</div>
 			</div>
 			<div class="rit">
-				
+				<div class="for_img">
+					<img src="img/five/img_rit.png" alt="">
+					<a href="#" id="full_recipe">FULL RECIPE</a>
+					<div class="time_for_img">
+						<span class="for_time1" style="color: #a47d5e">PREP</span><br>
+						<span class="for_time2" style="color:#56534c">15</span><br>
+						<span class="for_time3">mins</span><br>
+					</div>
+					<div class="time_for_img two">
+						<span class="for_time1" style="color: #a47d5e">COOK</span><br>
+						<span class="for_time2" style="color:#56534c">30</span><br>
+						<span class="for_time3">mins</span><br>
+					</div>	
+					<div class="time free">
+						<span class="for_time1">Ready in</span><br>
+						<span class="for_time2">50</span><br>
+						<span class="for_time3">mins</span>
+					</div>
+				</div>	
 			</div>
 		</div>
+		<footer>
+			<ul id="foot" style="float: left;">
+				<li><a href="#" id="menuu">Our menu</a></li>
+				<li><span>~</span></li>
+				<li><a href="#" id="menuu">Gallery</a></li>
+				<li><span>~</span></li>
+				<li><a href="#" id="menuu">Culture</a></li>
+			</ul>
+			<a href="#" class="logo logo_in_footer">Gustoso</a>
+			<ul id="foot" style="float: right;">
+				<li><a href="#" id="menuu">Events</a></li>
+				<li><span>~</span></li>
+				<li><a href="#" id="menuu">Catering</a></li>
+				<li><span>~</span></li>
+				<li><a href="#" id="menuu">Visit us</a></li>
+			</ul>
+		</footer>
 	</div>
 <script async type="text/javascript" src="js/script_1.js"></script>
 </body>
