--- a/test2/index.html
+++ b/test2/index.html
@@ -7,6 +7,36 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/adaptiv.css">
+	<style>
+		@font-face{
+			font-family: OpenSans Extrabold;
+			src:url(fonts/OpenSans-Extrabold.eot);
+			src:url(fonts/OpenSans-Extrabold.svg);
+			src:url(fonts/OpenSans-Extrabold.ttf);
+			src:url(fonts/OpenSans-Extrabold.woff);
+		}
+		@font-face{
+			font-family: OpenSans Bold;
+			src:url(fonts/OpenSans-Bold.eot);
+			src:url(fonts/OpenSans-Bold.svg);
+			src:url(fonts/OpenSans-Bold.ttf);
+			src:url(fonts/OpenSans-Bold.woff);
+		}
+		@font-face{
+			font-family: OpenSans;
+			src:url(fonts/OpenSans.eot);
+			src:url(fonts/OpenSans.svg);
+			src:url(fonts/OpenSans.ttf);
+			src:url(fonts/OpenSans.woff);
+		}
+		@font-face{
+			font-family: OpenSans-Italic;
+			src:url(fonts/OpenSans-Italic.eot);
+			src:url(fonts/OpenSans-Italic.svg);
+			src:url(fonts/OpenSans-Italic.ttf);
+			src:url(fonts/OpenSans-Italic.woff);
+		}
+	</style>
 </head>
 <body>
 	<div id="all_page">
@@ -230,7 +260,7 @@
 				<div class="mapp">
 					<script  type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=dzDHMKJKjCi2Ei1TEJcfHdlA1EhC4UK8&amp;width=100%25&amp;height=240&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
 				</div>
-				<form>
+				<form class="clearfix">
 					<span class="her" style="color: #fff">Send us a message</span><br>
 					<input type="text" name="name" placeholder="Name" class="name">
 					<input type="text" name="email" placeholder="Email" class="email">
@@ -254,7 +284,6 @@
 			</div>
 		</div>	
 	</div>
-
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/script2.js"></script>
