--- a/test/index.html
+++ b/test/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/adaptive.css">
 	<link rel="stylesheet" type="text/css" href="slider/index.css"/>
+	<link rel="stylesheet" type="text/css" href="css/adaptive.css">
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script> 
 	<script type="text/javascript" src="slider/click-carousel.js"></script>
 	<script type="text/javascript">
@@ -70,14 +70,14 @@
 						<li><a id="menuu" href="#">Contact</a></li>
 					</ul>
 				</div>
+				<i id="font" class="fa fa-bars" aria-hidden="true"></i>
 				<div class="fonts">
 					<ul>
 						<li><a href="#"><i id="font" class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="#"><i id="font" class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#"><i id="font" class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					</ul>
-				</div>
-					<i id="font" class="fa fa-bars" aria-hidden="true"></i>
+				</div>		
 		</header>
 	</div>
 		<div class="container_inner">
@@ -297,7 +297,7 @@
 			</div>
 		</div>
 		<footer>
-			<ul id="foot" style="float: left;">
+			<ul id="foot">
 				<li><a href="#" id="menuu">Our menu</a></li>
 				<li><span>~</span></li>
 				<li><a href="#" id="menuu">Gallery</a></li>
@@ -305,7 +305,7 @@
 				<li><a href="#" id="menuu">Culture</a></li>
 			</ul>
 			<a href="#" class="logo logo_in_footer">Gustoso</a>
-			<ul id="foot" style="float: right;">
+			<ul id="foot">
 				<li><a href="#" id="menuu">Events</a></li>
 				<li><span>~</span></li>
 				<li><a href="#" id="menuu">Catering</a></li>
