--- a/test6/index.html
+++ b/test6/index.html
@@ -12,7 +12,7 @@
         <meta name="HandheldFriendly" content="true">
 
         <!--[if (gt IE 9)|!(IE)]><!-->
-        <link href="static/css/mainuajsr0jj0f41afko6r.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/mainuajsr0jj0f41afko6r.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
         <meta property="og:title" content="#{data.title}">
         <meta property="og:title" content="">
@@ -24,7 +24,7 @@
         <meta property="og:image:height" content="300">
         <meta property="twitter:description" content="">
         <link rel="image_src" href="">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/x-icon" href="">
         <script>
             (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
         </script>
